--- a/voucher.html
+++ b/voucher.html
@@ -3,252 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kirim Ucapan Ultah & Kado (Pilih Penerima)</title>
+    <title>Kirim Pesan Manis!</title>
     <style>
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif;
-            background-color: #ffe0f0; /* Pink muda untuk suasana ultah */
+            background: linear-gradient(to right, #ffdde1, #ee9ca7);
             display: flex;
-            flex-direction: column; /* Mengatur item secara vertikal */
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
+            overflow: hidden;
+            position: relative;
         }
-        .main-title {
-            color: #ff1493;
-            font-size: 2.5em;
+
+        .container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
             text-align: center;
-            margin-bottom: 30px;
+            max-width: 400px;
+            width: 90%;
+            position: relative;
+            z-index: 1;
+            backdrop-filter: blur(5px);
+        }
+
+        h1 {
+            color: #d83a56;
+            margin-bottom: 20px;
+            font-size: 2.5em;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         }
-        .selection-buttons {
-            display: flex;
-            gap: 20px; /* Jarak antar tombol */
-            margin-bottom: 40px;
+
+        .input-group {
+            margin-bottom: 25px;
         }
-        .selection-buttons button {
-            background-color: #8a2be2; /* Ungu cerah */
+
+        label {
+            display: block;
+            margin-bottom: 10px;
+            color: #722c4d;
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+
+        textarea {
+            width: calc(100% - 20px);
+            padding: 15px;
+            border: 2px solid #ff9a8d;
+            border-radius: 15px;
+            font-size: 1.1em;
+            resize: vertical;
+            min-height: 100px;
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+        }
+
+        textarea:focus {
+            outline: none;
+            border-color: #ff5270;
+            box-shadow: 0 0 8px rgba(255, 82, 112, 0.4);
+        }
+
+        button {
+            background-color: #ff5270;
             color: white;
             padding: 15px 30px;
             border: none;
-            border-radius: 30px; /* Sangat bulat */
+            border-radius: 30px;
+            font-size: 1.3em;
             cursor: pointer;
-            font-size: 1.5em;
+            transition: all 0.3s ease;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
             font-weight: bold;
-            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
-        .selection-buttons button:hover {
-            background-color: #6a1aab; /* Ungu lebih gelap */
-            transform: translateY(-3px); /* Efek melayang lebih tinggi */
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+
+        button:hover {
+            background-color: #d83a56;
+            transform: translateY(-3px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
         }
-        .container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
-            width: 100%;
-            max-width: 450px;
-            box-sizing: border-box;
-            border: 3px solid #ff69b4;
-            display: none; /* Sembunyikan formulir secara default */
-            animation: fadeIn 0.5s ease-in-out; /* Animasi muncul */
+
+        /* Dekorasi imut (balon, hati, bintang) */
+        .decoration {
+            position: absolute;
+            opacity: 0.6;
+            animation: float 10s ease-in-out infinite;
         }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+
+        .heart {
+            color: #ff7e8d;
+            font-size: 40px;
+            position: absolute;
+            animation: float 10s ease-in-out infinite;
         }
-        h2 {
-            text-align: center;
-            color: #ff1493;
-            margin-bottom: 25px;
-            font-size: 2.2em;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+
+        .star {
+            color: #ffe66d;
+            font-size: 30px;
+            position: absolute;
+            animation: twinkle 5s ease-in-out infinite alternate;
         }
-        .form-group {
-            margin-bottom: 20px;
+
+        /* Animasi */
+        @keyframes float {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0); }
         }
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #8a2be2;
-            font-weight: bold;
-            font-size: 1.1em;
+
+        @keyframes twinkle {
+            0% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.2); opacity: 0.7; }
+            100% { transform: scale(1); opacity: 1; }
         }
-        input[type="text"],
-        textarea {
-            width: calc(100% - 20px);
-            padding: 12px;
-            border: 2px solid #ffa07a;
-            border-radius: 8px;
-            box-sizing: border-box;
-            font-size: 16px;
-            background-color: #fffafa;
-        }
-        textarea {
-            resize: vertical;
-            min-height: 120px;
-        }
-        button[type="submit"] {
-            background-color: #25D366;
-            color: white;
-            padding: 15px 25px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            width: 100%;
-            font-size: 20px;
-            font-weight: bold;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-        button[type="submit"]:hover {
-            background-color: #1DA851;
-            transform: translateY(-2px);
-        }
-        .emoji {
-            font-size: 1.5em;
-            vertical-align: middle;
-            margin-right: 5px;
+
+        /* Responsive */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2em;
+            }
+            button {
+                font-size: 1.1em;
+                padding: 12px 25px;
+            }
+            .container {
+                padding: 20px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1 class="main-title">selamay ulang tahun kaka ku yg cantik!</h1>
-
-    <div class="selection-buttons">
-        <button id="btnAnggi"><span class="emoji">🎁</span> Untuk Anggi</button>
-        <button id="btnTamara"><span class="emoji">🎁</span> Untuk Tamara</button>
+    <div class="container">
+        <h1>💖 Kirim Pesan Manis! 💖</h1>
+        <div class="input-group">
+            <label for="message">Tulis Ucapanmu di Sini:</label>
+            <textarea id="message" placeholder="Contoh: Selamat tidur zaen!"></textarea>
+        </div>
+        <button onclick="sendWhatsApp()">Kirim Via WhatsApp</button>
     </div>
 
-    <div id="formAnggi" class="container">
-        <h2><span class="emoji">🎉</span> Kirim Ucapan Ultah & Kado untuk Anggi <span class="emoji">🎁</span></h2>
-        <form id="whatsappFormAnggi">
-            <div class="form-group">
-                <label for="namaPengirimAnggi"><span class="emoji">👤</span> Nama Anda (Pengirim):</label>
-                <input type="text" id="namaPengirimAnggi" name="namaPengirimAnggi" placeholder="Contoh: Budi" required>
-            </div>
-            <div class="form-group">
-                <label for="ucapanAnggi"><span class="emoji">💌</span> Ucapan Ulang Tahun Anda:</label>
-                <textarea id="ucapanAnggi" name="ucapanAnggi" placeholder="Contoh: Selamat ulang tahun Anggi! Semoga panjang umur dan bahagia selalu."></textarea>
-            </div>
-            <div class="form-group">
-                <label for="kadoLinkAnggi"><span class="emoji">🔗</span> Link Kado Virtual (misal: Dana Kaget):</label>
-                <input type="text" id="kadoLinkAnggi" name="kadoLinkAnggi" placeholder="Tempel link Dana Kaget atau kado virtual di sini">
-            </div>
-            <button type="submit"><span class="emoji">📲</span> Kirim ke Anggi via WhatsApp</button>
-        </form>
-    </div>
+    <span class="heart" style="top: 10%; left: 5%;">❤️</span>
+    <span class="heart" style="bottom: 15%; right: 10%; animation-delay: 2s;">❤️</span>
+    <span class="heart" style="top: 25%; right: 20%; animation-delay: 4s;">❤️</span>
+    <span class="heart" style="bottom: 5%; left: 30%; animation-delay: 1s;">❤️</span>
 
-    <div id="formTamara" class="container">
-        <h2><span class="emoji">🎉</span> Kirim Ucapan Ultah & Kado untuk Tamara <span class="emoji">🎁</span></h2>
-        <form id="whatsappFormTamara">
-            <div class="form-group">
-                <label for="namaPengirimTamara"><span class="emoji">👤</span> Nama Anda (Pengirim):</label>
-                <input type="text" id="namaPengirimTamara" name="namaPengirimTamara" placeholder="Contoh: Budi" required>
-            </div>
-            <div class="form-group">
-                <label for="ucapanTamara"><span class="emoji">💌</span> Ucapan Ulang Tahun Anda:</label>
-                <textarea id="ucapanTamara" name="ucapanTamara" placeholder="Contoh: Selamat ulang tahun Tamara! Semoga panjang umur dan bahagia selalu."></textarea>
-            </div>
-            <div class="form-group">
-                <label for="kadoLinkTamara"><span class="emoji">🔗</span> Link Kado Virtual (misal: Dana Kaget):</label>
-                <input type="text" id="kadoLinkTamara" name="kadoLinkTamara" placeholder="Tempel link Dana Kaget atau kado virtual di sini">
-            </div>
-            <button type="submit"><span class="emoji">📲</span> Kirim ke Tamara via WhatsApp</button>
-        </form>
-    </div>
+    <span class="star" style="top: 5%; right: 15%;">⭐</span>
+    <span class="star" style="bottom: 20%; left: 5%;">⭐</span>
+    <span class="star" style="top: 35%; left: 10%; animation-delay: 3s;">⭐</span>
+    <span class="star" style="bottom: 10%; right: 25%; animation-delay: 0.5s;">⭐</span>
+    <span class="star" style="top: 50%; left: 40%; animation-delay: 2.5s;">⭐</span>
+
 
     <script>
-        // Ambil elemen tombol dan formulir
-        const btnAnggi = document.getElementById('btnAnggi');
-        const btnTamara = document.getElementById('btnTamara');
-        const formAnggi = document.getElementById('formAnggi');
-        const formTamara = document.getElementById('formTamara');
+        function sendWhatsApp() {
+            const userMessage = document.getElementById('message').value;
+            // Pastikan pesan minimal 4 kata
+            const words = userMessage.trim().split(/\s+/); // Memisahkan pesan berdasarkan spasi dan menghapus spasi ekstra
+            if (words.length < 4) {
+                alert('Pesanmu minimal harus terdiri dari 4 kata!');
+                return; // Berhenti jika pesan kurang dari 4 kata
+            }
 
-        // Fungsi untuk menyembunyikan semua formulir
-        function hideAllForms() {
-            formAnggi.style.display = 'none';
-            formTamara.style.display = 'none';
+            // The DANA Kaget link and message
+            const danaKagetText = "\n\n> Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=sqppmzm43&r=cAYM8h&orderId=20250531101214442315010300166998224974714";
+
+            // Combine user's message and DANA Kaget text
+            const fullMessage = userMessage + danaKagetText;
+
+            const phoneNumber = '6282396445595'; // The desired phone number
+            const whatsappUrl = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(fullMessage)}`;
+            window.open(whatsappUrl, '_blank');
         }
-
-        // Event listener untuk tombol Anggi
-        btnAnggi.addEventListener('click', function() {
-            hideAllForms(); // Sembunyikan formulir lain
-            formAnggi.style.display = 'block'; // Tampilkan formulir Anggi
-        });
-
-        // Event listener untuk tombol Tamara
-        btnTamara.addEventListener('click', function() {
-            hideAllForms(); // Sembunyikan formulir lain
-            formTamara.style.display = 'block'; // Tampilkan formulir Tamara
-        });
-
-        // Event listener untuk submit formulir Anggi
-        document.getElementById('whatsappFormAnggi').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const namaPengirim = document.getElementById('namaPengirimAnggi').value;
-            const namaPenerima = 'Anggi';
-            const ucapan = document.getElementById('ucapanAnggi').value;
-            const kadoLink = document.getElementById('kadoLinkAnggi').value;
-            const nomorWhatsApp = '6285805286784'; // Nomor WhatsApp Anggi
-
-            let pesanWhatsApp = `🥳🎉 Selamat Ulang Tahun, ${namaPenerima}! 🎉🥳\n\n`;
-
-            if (ucapan) {
-                pesanWhatsApp += `Dari ${namaPengirim}:\n"${ucapan}"\n\n`;
-            } else {
-                pesanWhatsApp += `Dari ${namaPengirim}:\n"Semoga hari ini penuh kebahagiaan dan tawa!"\n\n`;
-            }
-            
-            if (kadoLink) {
-                pesanWhatsApp += `Ini ada kado virtual spesial untukmu:\n🎁 ${kadoLink} 🎁\n\n`;
-            } else {
-                pesanWhatsApp += `Semoga suka dengan ucapan sederhana ini ya!`;
-            }
-
-            pesanWhatsApp += `\nSalam hangat,\n${namaPengirim}`;
-
-            const pesanTerencode = encodeURIComponent(pesanWhatsApp);
-            const urlWhatsApp = `https://wa.me/${nomorWhatsApp}?text=${pesanTerencode}`;
-            window.open(urlWhatsApp, '_blank');
-        });
-
-        // Event listener untuk submit formulir Tamara
-        document.getElementById('whatsappFormTamara').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const namaPengirim = document.getElementById('namaPengirimTamara').value;
-            const namaPenerima = 'Tamara';
-            const ucapan = document.getElementById('ucapanTamara').value;
-            const kadoLink = document.getElementById('kadoLinkTamara').value;
-            const nomorWhatsApp = '6285179751924'; // Nomor WhatsApp Tamara
-
-            let pesanWhatsApp = `🥳🎉 Selamat Ulang Tahun, ${namaPenerima}! 🎉🥳\n\n`;
-
-            if (ucapan) {
-                pesanWhatsApp += `Dari ${namaPengirim}:\n"${ucapan}"\n\n`;
-            } else {
-                pesanWhatsApp += `Dari ${namaPengirim}:\n"Semoga hari ini penuh kebahagiaan dan tawa!"\n\n`;
-            }
-            
-            if (kadoLink) {
-                pesanWhatsApp += `Ini ada kado virtual spesial untukmu:\n🎁 ${kadoLink} 🎁\n\n`;
-            } else {
-                pesanWhatsApp += `Semoga suka dengan ucapan sederhana ini ya!`;
-            }
-
-            pesanWhatsApp += `\nSalam hangat,\n${namaPengirim}`;
-
-            const pesanTerencode = encodeURIComponent(pesanWhatsApp);
-            const urlWhatsApp = `https://wa.me/${nomorWhatsApp}?text=${pesanTerencode}`;
-            window.open(urlWhatsApp, '_blank');
-        });
     </script>
 </body>
 </html>
