--- a/index.html
+++ b/index.html
@@ -540,7 +540,21 @@ ul li::before {
                 <button class="close-button" id="close-dana-form-button">&times;</button>
                 <br><br>
                 <h3>NARA ZAEN</h3>
-         <p> sl23wcqfu&r </p>     
+         <p>kode 40s : sl23wcqfu&r </p><br>
+                <p>╭─⬣「 _✰ 𝐒𝐢𝐧𝐠𝐚𝐩𝐮𝐫𝐚 ✯_ 」
+│ 𝐊𝐨𝐝𝐞 𝐫𝐚𝐡𝐚𝐬𝐢𝐚 🥱
+│-----------------------
+│ 1. huruf pertama
+│ 2. huruf kedua
+│ 3.  huruf terakhir + 2 huruf ke depan
+│ 4. J 
+│ 5. jumlah huruf "A" + 1
+│ 6.  huruf ke-2 dibalik
+│ 7. huruf ke-6
+│ 8. huruf ke-1 dibalik
+│ 9. huruf ke-2 dari belakang
+│ 10. simbol pulau-pulau
+╰────────────⬣</p>
                  <form id="dana-code-form">
                     <label for="dana_code">Masukin Kode:</label>
                     <input type="text" id="dana_code" name="dana_code" required placeholder="paste disini">
