--- a/index.html
+++ b/index.html
@@ -541,19 +541,19 @@ ul li::before {
                 <br><br>
                 <h3>NARA ZAEN</h3>
          <p>kode 40s : sl23wcqfu&r </p><br>
-                <p>╭─⬣「 _✰ 𝐒𝐢𝐧𝐠𝐚𝐩𝐮𝐫𝐚 ✯_ 」
-│ 𝐊𝐨𝐝𝐞 𝐫𝐚𝐡𝐚𝐬𝐢𝐚 🥱
-│-----------------------
-│ 1. huruf pertama
-│ 2. huruf kedua
-│ 3.  huruf terakhir + 2 huruf ke depan
-│ 4. J 
-│ 5. jumlah huruf "A" + 1
-│ 6.  huruf ke-2 dibalik
-│ 7. huruf ke-6
-│ 8. huruf ke-1 dibalik
-│ 9. huruf ke-2 dari belakang
-│ 10. simbol pulau-pulau
+                <p>╭─⬣「 _✰ 𝐒𝐢𝐧𝐠𝐚𝐩𝐮𝐫𝐚 ✯_ 」<br>
+│ 𝐊𝐨𝐝𝐞 𝐫𝐚𝐡𝐚𝐬𝐢𝐚 🥱<br>
+│-----------------------<br>
+│ 1. huruf pertama<br>
+│ 2. huruf kedua<br>
+│ 3.  huruf terakhir + 2 huruf ke depan<br>
+│ 4. J <br>
+│ 5. jumlah huruf "A" + 1<br>
+│ 6.  huruf ke-2 dibalik<br>
+│ 7. huruf ke-6<br>
+│ 8. huruf ke-1 dibalik<br>
+│ 9. huruf ke-2 dari belakang<br>
+│ 10. simbol pulau-pulau<br>
 ╰────────────⬣</p>
                  <form id="dana-code-form">
                     <label for="dana_code">Masukin Kode:</label>
