--- a/voucher.html
+++ b/voucher.html
@@ -3,180 +3,334 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kirim Pesan Manis!</title>
+    <title>Good Night!</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            background: linear-gradient(to right, #ffdde1, #ee9ca7);
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            margin: 0;
+            background-image: url('https://files.catbox.moe/tlmai8.jpg');
+            background-size: cover;
+            background-position: center;
+            color: #fff;
             overflow: hidden;
             position: relative;
         }
 
         .container {
-            background-color: rgba(255, 255, 255, 0.8);
+            background-image: url('https://i.ibb.co/Rq5wKzy/8865fdebfdfc5a58cf297a90a1fd5b53-1.png');
+            background-size: cover;
+            background-position: center;
             padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
             text-align: center;
-            max-width: 400px;
-            width: 90%;
-            position: relative;
-            z-index: 1;
-            backdrop-filter: blur(5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            max-width: 90%;
+            width: 400px; /* Lebar tetap untuk konsistensi */
+            position: absolute; /* Mengatur posisi absolut untuk transisi yang lebih baik */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: black;
+            transition: opacity 0.5s ease, transform 0.5s ease; /* Transisi untuk fade dan posisi */
         }
 
-        h1 {
-            color: #d83a56;
-            margin-bottom: 20px;
-            font-size: 2.5em;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        /* Initial Screen Styles */
+        #initialScreen button {
+            background-color: #ff69b4;
+            color: white;
+            border: none;
+            padding: 18px 35px;
+            font-size: 24px;
+            border-radius: 30px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            animation: pulse 2s infinite;
         }
 
-        .input-group {
+        #initialScreen button:hover {
+            background-color: #e65a9f;
+            transform: translateY(-3px);
+        }
+
+        .cute-text {
+            margin-top: 20px;
+            font-size: 1.1em;
+            font-style: italic;
+            color: #ffe0f0;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+        }
+
+        /* Input Screen Styles */
+        #inputScreen h1 {
+            color: #ffe0f0;
             margin-bottom: 25px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-            color: #722c4d;
-            font-size: 1.2em;
-            font-weight: bold;
+            font-size: 2.2em;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
         }
 
         textarea {
             width: calc(100% - 20px);
-            padding: 15px;
-            border: 2px solid #ff9a8d;
-            border-radius: 15px;
-            font-size: 1.1em;
+            height: 120px;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 2px solid #ffb6c1;
+            border-radius: 10px;
+            font-size: 1em;
+            background-color: rgba(255, 255, 255, 0.9);
+            color: #333;
             resize: vertical;
-            min-height: 100px;
-            box-sizing: border-box;
-            transition: all 0.3s ease;
+            box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);
         }
 
-        textarea:focus {
-            outline: none;
-            border-color: #ff5270;
-            box-shadow: 0 0 8px rgba(255, 82, 112, 0.4);
-        }
-
-        button {
-            background-color: #ff5270;
+        #sendWaButton {
+            background-color: #25d366;
             color: white;
-            padding: 15px 30px;
             border: none;
-            border-radius: 30px;
-            font-size: 1.3em;
+            padding: 15px 30px;
+            font-size: 1.1em;
+            border-radius: 25px;
             cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        #sendWaButton:hover {
+            background-color: #1da851;
+            transform: translateY(-2px);
+        }
+
+        .hint-text {
+            margin-top: 15px;
+            font-size: 0.9em;
+            color: #d0e0f0;
+            font-style: italic;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+        }
+
+        .hidden {
+            opacity: 0;
+            pointer-events: none; /* Mencegah interaksi saat hidden */
+            z-index: -1; /* Memastikan tidak menimpa elemen lain */
+        }
+
+        .visible {
+            opacity: 1;
+            pointer-events: auto;
+            z-index: 10;
+        }
+
+        .cute-animations {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            pointer-events: none;
+            overflow: hidden;
+            z-index: 5;
+        }
+
+        .animated-element {
+            position: absolute;
+            opacity: 0;
+            animation-iteration-count: infinite;
+            animation-fill-mode: forwards;
+        }
+
+        .bear {
+            width: 100px;
+            bottom: -50px;
+            left: 10%;
+            animation: slideUpAndWiggle 8s ease-in-out infinite;
+            animation-delay: 1s;
+        }
+
+        .stars {
+            width: 80px;
+            top: 5%;
+            right: 15%;
+            animation: twinkleAndFloat 10s ease-in-out infinite;
+            animation-delay: 2s;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        @keyframes slideUpAndWiggle {
+            0% { transform: translateY(100px) rotate(0deg); opacity: 0; }
+            20% { opacity: 1; }
+            50% { transform: translateY(-20px) rotate(5deg); }
+            80% { transform: translateY(10px) rotate(-5deg); }
+            100% { transform: translateY(100px) rotate(0deg); opacity: 0; }
+        }
+
+        @keyframes twinkleAndFloat {
+            0% { transform: translateY(0px) scale(1); opacity: 0; }
+            20% { opacity: 1; transform: translateY(-10px) scale(1.1); }
+            40% { transform: translateY(0px) scale(1); }
+            60% { opacity: 1; transform: translateY(-15px) scale(1.2); }
+            80% { transform: translateY(0px) scale(1); }
+            100% { transform: translateY(0px) scale(1); opacity: 0; }
+        }
+
+        /* Waiting Screen Styles */
+        #waitingScreen {
+            background-image: url('https://i.ibb.co/Rq5wKzy/8865fdebfdfc5a58cf297a90a1fd5b53-1.png');
+            background-size: cover;
+            background-position: center;
+            padding: 30px;
+            border-radius: 15px;
+            text-align: center;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            max-width: 90%;
+            width: 400px; /* Lebar tetap untuk konsistensi */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: black;
+            font-size: 1.5em;
             font-weight: bold;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 200px; /* Adjust as needed */
+            transition: opacity 0.5s ease, transform 0.5s ease;
         }
 
-        button:hover {
-            background-color: #d83a56;
-            transform: translateY(-3px);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+        #waitingScreen p {
+            color: #ff69b4;
+            margin-bottom: 20px;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
         }
 
-        /* Dekorasi imut (balon, hati, bintang) */
-        .decoration {
-            position: absolute;
-            opacity: 0.6;
-            animation: float 10s ease-in-out infinite;
-        }
-
-        .heart {
-            color: #ff7e8d;
-            font-size: 40px;
-            position: absolute;
-            animation: float 10s ease-in-out infinite;
-        }
-
-        .star {
-            color: #ffe66d;
-            font-size: 30px;
-            position: absolute;
-            animation: twinkle 5s ease-in-out infinite alternate;
-        }
-
-        /* Animasi */
-        @keyframes float {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-            100% { transform: translateY(0); }
-        }
-
-        @keyframes twinkle {
-            0% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.2); opacity: 0.7; }
-            100% { transform: scale(1); opacity: 1; }
-        }
-
-        /* Responsive */
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 2em;
-            }
-            button {
-                font-size: 1.1em;
-                padding: 12px 25px;
-            }
-            .container {
-                padding: 20px;
-            }
+        #countdown {
+            font-size: 2em;
+            color: #8a2be2;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>💖 Kirim Pesan Manis! 💖</h1>
-        <div class="input-group">
-            <label for="message">Tulis Ucapanmu di Sini:</label>
-            <textarea id="message" placeholder="Contoh: Selamat tidur zaen!"></textarea>
-        </div>
-        <button onclick="sendWhatsApp()">Kirim Via WhatsApp</button>
+    <div class="container visible" id="initialScreen">
+        <button id="goodNightButton">Good Night!</button>
+        <p class="cute-text">Tekan tombol ini untuk kejutan manis!</p>
     </div>
 
-    <span class="heart" style="top: 10%; left: 5%;">❤️</span>
-    <span class="heart" style="bottom: 15%; right: 10%; animation-delay: 2s;">❤️</span>
-    <span class="heart" style="top: 25%; right: 20%; animation-delay: 4s;">❤️</span>
-    <span class="heart" style="bottom: 5%; left: 30%; animation-delay: 1s;">❤️</span>
+    <div class="container hidden" id="waitingScreen">
+        <p>Sedang menunggumu menyayangiku...</p>
+        <p id="countdown">20</p>
+        <p class="cute-text">Aku butuh sedikit lebih banyak kasih sayang darimu sebelum malam ini.</p>
+    </div>
 
-    <span class="star" style="top: 5%; right: 15%;">⭐</span>
-    <span class="star" style="bottom: 20%; left: 5%;">⭐</span>
-    <span class="star" style="top: 35%; left: 10%; animation-delay: 3s;">⭐</span>
-    <span class="star" style="bottom: 10%; right: 25%; animation-delay: 0.5s;">⭐</span>
-    <span class="star" style="top: 50%; left: 40%; animation-delay: 2.5s;">⭐</span>
+    <div class="container hidden" id="inputScreen">
+        <h1>Kirim Ucapan Manis</h1>
+        <div class="cute-animations">
+            <img src="https://i.ibb.co/wZbCHw65/8865fdebfdfc5a58cf297a90a1fd5b53.png" alt="Cute Bear" class="animated-element bear">
+            <img src="https://i.ibb.co/wZbCHw65/8865fdebfdfc5a58cf297a90a1fd5b53.png" alt="Sparkling Stars" class="animated-element stars">
+        </div>
+        <textarea id="messageInput" placeholder="Tulis ucapan selamat malammu di sini..." disabled></textarea>
+        <button id="sendWaButton" disabled>Kirim Lewat WhatsApp</button>
+        <p class="hint-text">Ucapanmu akan langsung terkirim!</p>
+    </div>
 
+    <audio id="backgroundMusic" loop>
+        <source src="https://files.catbox.moe/et7tj5.mp3" type="audio/mpeg">
+        Maaf, browser Anda tidak mendukung elemen audio.
+    </audio>
 
     <script>
-        function sendWhatsApp() {
-            const userMessage = document.getElementById('message').value;
-            // Pastikan pesan minimal 4 kata
-            const words = userMessage.trim().split(/\s+/); // Memisahkan pesan berdasarkan spasi dan menghapus spasi ekstra
-            if (words.length < 4) {
-                alert('Pesanmu minimal harus terdiri dari 4 kata!');
-                return; // Berhenti jika pesan kurang dari 4 kata
-            }
+        document.addEventListener('DOMContentLoaded', () => {
+            const goodNightButton = document.getElementById('goodNightButton');
+            const initialScreen = document.getElementById('initialScreen');
+            const waitingScreen = document.getElementById('waitingScreen');
+            const inputScreen = document.getElementById('inputScreen');
+            const backgroundMusic = document.getElementById('backgroundMusic');
+            const messageInput = document.getElementById('messageInput');
+            const sendWaButton = document.getElementById('sendWaButton');
+            const countdownElement = document.getElementById('countdown');
 
-            // The DANA Kaget link and message
-            const danaKagetText = "\n\n> Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=sqppmzm43&r=cAYM8h&orderId=20250531101214442315010300166998224974714";
+            // Define the WhatsApp number here
+            const whatsappNumber = '6285974923298'; 
 
-            // Combine user's message and DANA Kaget text
-            const fullMessage = userMessage + danaKagetText;
+            let audioPlayed = false;
+            let countdownSeconds = 20;
 
-            const phoneNumber = '6282396445595'; // The desired phone number
-            const whatsappUrl = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(fullMessage)}`;
-            window.open(whatsappUrl, '_blank');
-        }
+            goodNightButton.addEventListener('click', () => {
+                // Sembunyikan initial screen
+                initialScreen.classList.remove('visible');
+                initialScreen.classList.add('hidden');
+
+                // Tampilkan waiting screen setelah transisi
+                setTimeout(() => {
+                    initialScreen.style.display = 'none'; // Hapus dari layout
+                    waitingScreen.classList.remove('hidden');
+                    waitingScreen.classList.add('visible');
+                }, 500); // Sesuaikan dengan durasi transisi CSS
+
+                if (!audioPlayed) {
+                    backgroundMusic.play().catch(e => {
+                        console.error("Gagal memutar musik:", e);
+                        alert("Tekan di mana saja di halaman untuk memutar musik latar!");
+                    });
+                    audioPlayed = true;
+                }
+
+                let countdownInterval = setInterval(() => {
+                    countdownSeconds--;
+                    countdownElement.textContent = countdownSeconds;
+
+                    if (countdownSeconds <= 0) {
+                        clearInterval(countdownInterval);
+                        // Sembunyikan waiting screen
+                        waitingScreen.classList.remove('visible');
+                        waitingScreen.classList.add('hidden');
+
+                        // Tampilkan input screen setelah transisi
+                        setTimeout(() => {
+                            waitingScreen.style.display = 'none'; // Hapus dari layout
+                            inputScreen.classList.remove('hidden');
+                            inputScreen.classList.add('visible');
+                            messageInput.disabled = false; // Enable textarea
+                            sendWaButton.disabled = false; // Enable button
+                        }, 500); // Sesuaikan dengan durasi transisi CSS
+                    }
+                }, 1000);
+            });
+
+            sendWaButton.addEventListener('click', () => {
+                const message = messageInput.value;
+                if (message.trim() === '') {
+                    alert('Ups! Sepertinya kamu lupa menulis ucapan. Coba tulis sesuatu yang manis!');
+                    return;
+                }
+
+                const encodedMessage = encodeURIComponent(message);
+                // Use the whatsappNumber variable here
+                const whatsappUrl = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
+
+                window.open(whatsappUrl, '_blank');
+            });
+
+            // Auto-play musik saat ada interaksi pertama di body
+            document.body.addEventListener('click', () => {
+                if (!audioPlayed) {
+                    backgroundMusic.play().catch(e => {
+                        console.error("Gagal memutar musik setelah interaksi:", e);
+                    });
+                    audioPlayed = true;
+                }
+            }, { once: true });
+        });
     </script>
 </body>
 </html>
