--- a/io.html
+++ b/io.html
@@ -315,7 +315,7 @@
                 <label for="paymentMethodDanaKaget">Metode Pembayaran:</label>
                 <select id="paymentMethodDanaKaget" required>
                     <option value="">Pilih Metode Pembayaran</option>
-                    <option value="qris">QRIS (Bebas Biaya)</option>
+                    <option value="qris">DANA (Bebas Biaya)</option>
                     <option value="gopay">Gopay</option>
                     <option value="ovo">OVO</option>
                     <option value="shopeepay">ShopeePay</option>
